--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,11 @@
+{{!< index}}
 <div class="login-container">
     <div class="login-area">
         <div class="logo"></div>
         <div class="login-text">
             <span>Sign in to access all announcements in one place</span>
         </div>
-        <div id="google-link" class="google-button">
-            <span class="icon"></span> <span class="label">Log in with Google</span>
-        </div>
+        <div id="google-link"></div>
     </div>
     <div class="app-install">
         <p>Get the app.</p>
@@ -22,8 +21,3 @@
         </a>
     </div>
 </div>
-<script>
-    $(function(){
-        $("#lnkSignOut").hide();
-    });
-</script>
