--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -28,7 +28,7 @@
         console.log('Name: ' + profile.getName());
         console.log('Image URL: ' + profile.getImageUrl());
         console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
-        window.location = '/login/'+googleUser.getAuthResponse().id_token;
+        window.location = '/signin/'+googleUser.getAuthResponse().id_token;
     }
 
     function onFailure(error) {
