--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,6 +3,7 @@
 <body>
     <div class="container">
         <div class="row">
+            <div>Hi !!</div>
             <a href="#" onclick="signOut();" id="lnkSignOut">Sign out</a>
             <div class="col-md-12 text-center">
                 {{{ body }}}
@@ -14,7 +15,7 @@
     function signOut() {
         var auth2 = gapi.auth2.getAuthInstance();
         auth2.signOut().then(function () {
-            window.location = '/';
+            window.location = '/signout';
         });
     }   
     function onLoad() {
