added greeting text

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,7 +3,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div>Hi !!</div>
+            <div>Hi {{userFname}}!!</div>
             <a href="#" onclick="signOut();" id="lnkSignOut">Sign out</a>
             <div class="col-md-12 text-center">
                 {{{ body }}}
