--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -8,4 +8,5 @@
 
     <link rel="stylesheet" href="/styles/main.css"></link>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
 </head>
