--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,1 +1,42 @@
-<h1>Danveem Home</h1>
+<link rel="stylesheet" href="/styles/home.css"></link>
+<script src="/scripts/directives/popup-window/popup-window-directive.js"></script>
+<script src="/scripts/home.js"></script>
+<div ng-controller="HomeController">
+    <div class="row" style="text-align: center;">
+        <div class="col-md-12">
+            <h1>Welcome to Danveem</h1>
+            <button type="button" class="btn btn-default" ng-click="displayCreateAnnouncementBoard = true;">Create New Board</a>
+        </div>
+    </div>
+    <div style="height:10px;"></div>
+    <div class="row">
+        <div class="col-md-3">
+            <a href="#" class="thumbnail">
+                <img src="..." alt="...">
+            </a>
+        </div>
+        <div class="col-md-3">
+            <a href="#" class="thumbnail">
+                <img src="..." alt="...">
+            </a>
+        </div>
+        <div class="col-md-3">
+            <a href="#" class="thumbnail">
+                <img src="..." alt="...">
+            </a>
+        </div>
+        <div class="col-md-3">
+            <a href="#" class="thumbnail">
+                <img src="..." alt="...">   
+            </a>
+        </div>
+    </div>
+    <popup-window width='460' height='150' display='displayCreateAnnouncementBoard' display-close="true" popup-title='Create Announcement Board' api="createAnnouncementBoardApi">
+        <div class="input-group">
+            <span class="input-group-addon" id="basic-addon1">Title</span>
+            <input id="txtBoardTitle" type="text" class="form-control" placeholder="Enter title here" aria-describedby="basic-addon1" ng-model="title">
+        </div>
+        <div style="height:20px;"></div>
+        <button style="float:right;marging-right:10px;" type="button" class="btn btn-default" ng-click="createNewBoard(createAnnouncementBoardApi)">Create</button>
+    </popup-window>
+</div>
