--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,6 +3,7 @@
 <script src="/app/resources/userResource.js"></script>
 <script src="/app/resources/boardResource.js"></script>
 <script src="/app/resources/noticesResource.js"></script>
+<script src="/app/resources/invitationResource.js"></script>
 <script src="/app/pages/homeController.js"></script>
 <script src="/app/pages/editBoardController.js"></script>    
 <script src="/app/pages/viewBoardController.js"></script>    
