--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,6 @@
 <script src="/app/app.js"></script>
 <script src="/app/directives/popup-window/popup-window-directive.js"></script>
+<script src="/app/directives/alert/alert-directive.js"></script>
 <script src="/app/resources/userResource.js"></script>
 <script src="/app/resources/boardResource.js"></script>
 <script src="/app/resources/noticesResource.js"></script>
