--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,7 +4,7 @@
 <body>
     <div class="container">
         <div>
-            <div style="float:left;">Hi {{userFname}}!!</div>
+            <div style="float:left;">Hi {{userFname}}!! Logged in as {{email}}</div>
             <div style="float:right;"><a href="#" onclick="signOut();" id="lnkSignOut">Sign out</a></div>
             <div style="clear:both;"></div>
         </div>
